@@ -34,24 +34,17 @@ module ActiveRecord
     # #add_index, etc.).
     #
     # The +info+ hash is optional, and if given is used to define metadata
-    # about the current schema (like the schema's version):
+    # about the current schema (currently, only the schema's version):
     #
-    #   ActiveRecord::Schema.define(:version => 15) do
+    #   ActiveRecord::Schema.define(:version => 20380119000001) do
     #     ...
     #   end
     def self.define(info={}, &block)
       instance_eval(&block)
 
-      unless info.empty?
-        initialize_schema_information
-        cols = columns('schema_info')
-
-        info = info.map do |k,v|
-          v = Base.connection.quote(v, cols.detect { |c| c.name == k.to_s })
-          "#{k} = #{v}"
-        end
-
-        Base.connection.update "UPDATE #{Migrator.schema_info_table_name} SET #{info.join(", ")}"
+      unless info[:version].blank?
+        initialize_schema_migrations_table
+        assume_migrated_upto_version info[:version]
       end
     end
   end
