@@ -31,5 +31,5 @@ DROP TABLE legacy_things
 DROP TABLE numeric_data
 DROP TABLE mixed_case_monkeys
 DROP TABLE minimalistics
-DROP TABLE schema_info
+DROP TABLE schema_migrations
 go
